# ytmusicfs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README_OAUTH.md  direct_auth.py  oauth_helper.py  oauth_setup.py  oauth_temp_fix.py  pyproject.toml  recreate_oauth.py  requirements.txt  setup.cfg  setup.py  setup_auth.py  setup_oauth.py  test_auth.py  test_oauth.py  test_oauth_setup.py  update_oauth.py  upgrade_ytmusicapi.py  ytmusic_oauth_adapter.py  ytmusicfs.py  ytmusicfs_adapter.py
.github/workflows/: python-publish.yml  python-test.yml
contrib/: README.md  ytmusicfs.service  ytmusicfs@.service
tests/: __init__.py  test_auth_adapter.py  test_basics.py  test_cache.py  test_cli.py  test_client.py  test_content_fetcher.py  test_downloader.py  test_file_handler.py  test_filesystem.py  test_http_utils.py  test_integration.py  test_metadata.py  test_oauth_adapter.py  test_oauth_utils.py  test_path_router.py  test_processor.py  test_yt_dlp_utils.py
ytmusicfs/: __init__.py  auth_adapter.py  browser_setup.py  cache.py  cli.py  client.py  config.py  constants.py  content_fetcher.py  downloader.py  duration_fetcher.py  file_handler.py  filesystem.py  http_utils.py  metadata.py  oauth_adapter.py  oauth_setup.py  oauth_utils.py  path_router.py  processor.py  thread_manager.py  yt_dlp_utils.py
ytmusicfs/utils/: __init__.py  oauth_adapter.py  oauth_setup.py
