[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmusicfs"
version = "0.1.0"
description = "YouTube Music FUSE Filesystem"
readme = "README.md"
authors = [{ name = "astrovm" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: System :: Filesystems",
]
keywords = ["youtube", "music", "fuse", "filesystem", "streaming", "audio"]
requires-python = ">=3.9"
dependencies = [
  "cachetools==5.5.2",
  "fusepy==3.0.1",
  "requests==2.32.4",
  "yt-dlp==2025.2.19",
  "ytmusicapi==1.11.1",
]

[project.urls]
"Homepage" = "https://github.com/astrovm/ytmusicfs"
"Bug Tracker" = "https://github.com/astrovm/ytmusicfs/issues"

[project.scripts]
ytmusicfs = "ytmusicfs.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "flake8"]

[tool.setuptools]
packages = ["ytmusicfs"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
