[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytmusicfs"
version = "0.1.0"
description = "YouTube Music FUSE Filesystem"
readme = "README.md"
authors = [{ name = "astrovm" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: System :: Filesystems",
]
keywords = ["youtube", "music", "fuse", "filesystem", "streaming", "audio"]
requires-python = ">=3.10"
dependencies = [
  "cachetools==7.1.3",
  "fusepy==3.0.1",
  "requests==2.34.2",
  "yt-dlp==2026.3.17",
  "ytmusicapi==1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/astrovm/ytmusicfs"
"Bug Tracker" = "https://github.com/astrovm/ytmusicfs/issues"

[project.scripts]
ytmusicfs = "ytmusicfs.cli:main"

[project.optional-dependencies]
dev = ["build==1.5.0", "pytest", "pytest-cov", "black", "isort", "flake8"]

[tool.setuptools]
packages = ["ytmusicfs"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
