[metadata]
name = ytmusicfs
version = attr: ytmusicfs.__version__
description = YouTube Music FUSE filesystem
long_description = file: README.md
long_description_content_type = text/markdown
author = astrovm
author_email = ytmusicfs@4st.li
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia :: Sound/Audio
    Topic :: System :: Filesystems
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX :: Linux
keywords = youtube, music, filesystem, fuse, streaming
url = https://github.com/astrovm/ytmusicfs
project_urls =
    Bug Tracker = https://github.com/astrovm/ytmusicfs/issues
    Source = https://github.com/astrovm/ytmusicfs

[options]
packages = find:
python_requires = >=3.7
install_requires =
    fusepy>=3.0.1
    ytmusicapi>=1.10.2
    requests>=2.31.0
    google-auth>=2.22.0
    google-auth-oauthlib>=1.0.0
    yt-dlp>=2023.3.4
    packaging>=23.0

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    ytmusicfs = ytmusicfs.cli:main
    ytmusicfs-oauth = ytmusicfs.utils.oauth_setup:main
